fix calendar on IE, Edge and Firefox browsers

--- a/frontend/styles/base/form/input.scss
+++ b/frontend/styles/base/form/input.scss
@@ -127,4 +127,14 @@ input:disabled {
       right: $mediumBigPadding;
     }
   }
+
+  input:not([disabled]),
+  i:not([disabled]) {
+    &.medium-big,
+    &.big,
+    &.huge
+    {
+      cursor: pointer;
+    }
+  }
 }
